--- a/engine/preprocesing_model/model_selection.ipynb
+++ b/engine/preprocesing_model/model_selection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import nltk\n",
-    "from nltk import *\n",
+    "#from nltk import *\n",
     "import json\n",
     "\n",
     "import random\n",
@@ -29,6 +29,10 @@
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "\n",
+    "\n",
+    "#import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "\n",
     "# Ejemplo con Stack de RNNs\n",
     "from keras.layers import Embedding, SimpleRNN\n",
     "from keras.layers import Dense, Flatten, GlobalAveragePooling2D, LSTM, SpatialDropout1D\n",
@@ -38,9 +42,109 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score, f1_score #son metricas - area debajo de la curva roc\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras\n",
     "\n",
-    "\n"
+    "# Ejemplo con Stack de RNNs\n",
+    "from keras.layers import Embedding, SimpleRNN\n",
+    "from keras.layers import Dense, Flatten, GlobalAveragePooling2D, LSTM, SpatialDropout1D\n",
+    "from keras.models import Sequential, load_model\n",
+    "from keras.losses import SparseCategoricalCrossentropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                      Version\n",
+      "---------------------------- --------\n",
+      "absl-py                      2.1.0\n",
+      "asttokens                    2.4.1\n",
+      "astunparse                   1.6.3\n",
+      "cachetools                   5.3.2\n",
+      "certifi                      2024.2.2\n",
+      "charset-normalizer           3.3.2\n",
+      "colorama                     0.4.6\n",
+      "comm                         0.2.1\n",
+      "debugpy                      1.8.1\n",
+      "decorator                    5.1.1\n",
+      "executing                    2.0.1\n",
+      "flatbuffers                  23.5.26\n",
+      "gast                         0.4.0\n",
+      "google-auth                  2.28.1\n",
+      "google-auth-oauthlib         1.0.0\n",
+      "google-pasta                 0.2.0\n",
+      "grpcio                       1.62.0\n",
+      "h5py                         3.10.0\n",
+      "idna                         3.6\n",
+      "ipykernel                    6.29.2\n",
+      "ipython                      8.22.1\n",
+      "jax                          0.4.24\n",
+      "jedi                         0.19.1\n",
+      "jupyter_client               8.6.0\n",
+      "jupyter_core                 5.7.1\n",
+      "keras                        2.12.0\n",
+      "libclang                     16.0.6\n",
+      "Markdown                     3.5.2\n",
+      "MarkupSafe                   2.1.5\n",
+      "matplotlib-inline            0.1.6\n",
+      "ml-dtypes                    0.3.2\n",
+      "nest-asyncio                 1.6.0\n",
+      "numpy                        1.23.5\n",
+      "oauthlib                     3.2.2\n",
+      "opt-einsum                   3.3.0\n",
+      "packaging                    23.2\n",
+      "parso                        0.8.3\n",
+      "pip                          24.0\n",
+      "platformdirs                 4.2.0\n",
+      "prompt-toolkit               3.0.43\n",
+      "protobuf                     4.25.3\n",
+      "psutil                       5.9.8\n",
+      "pure-eval                    0.2.2\n",
+      "pyasn1                       0.5.1\n",
+      "pyasn1-modules               0.3.0\n",
+      "Pygments                     2.17.2\n",
+      "python-dateutil              2.8.2\n",
+      "pywin32                      306\n",
+      "pyzmq                        25.1.2\n",
+      "requests                     2.31.0\n",
+      "requests-oauthlib            1.3.1\n",
+      "rsa                          4.9\n",
+      "scipy                        1.12.0\n",
+      "setuptools                   65.5.0\n",
+      "six                          1.16.0\n",
+      "stack-data                   0.6.3\n",
+      "tensorboard                  2.12.3\n",
+      "tensorboard-data-server      0.7.2\n",
+      "tensorflow-estimator         2.12.0\n",
+      "tensorflow-io-gcs-filesystem 0.31.0\n",
+      "termcolor                    2.4.0\n",
+      "tornado                      6.4\n",
+      "traitlets                    5.14.1\n",
+      "typing_extensions            4.9.0\n",
+      "urllib3                      2.2.1\n",
+      "wcwidth                      0.2.13\n",
+      "Werkzeug                     3.0.1\n",
+      "wheel                        0.42.0\n",
+      "wrapt                        1.14.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip list"
    ]
   },
   {
@@ -361,8 +465,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
